--- a/ind.html
+++ b/ind.html
@@ -18,7 +18,7 @@
                     id="navbarSupportedContent">
                     <ul class="navbar-nav mx-auto">
                         <li class="nav-item active">
-                            <a calss="nav-link" href="ind.html">Home</a>
+                            <a class="nav-link" href="ind.html">Home</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#page1">Skills</a>
@@ -60,15 +60,15 @@
                         <h1>My Skills</h1>
                         <h4>
                             As a dedicated web developer, I have honed a versatile skill set
-                             that empowers me to bring creative visioms to life in the digital realm.
+                             that empowers me to bring creative visions to life in the digital realm.
                         </h4>
                     </div>
                     </div>
                 <div id="left">
                     <div class="box">
-                        <h1>Competetive Programming</h1>
+                        <h1>Competitive Programming</h1>
                         <p>
-                            I regularly do competetive coding since I love problem
+                            I regularly do competitive coding since I love problem
                             solving.I have a 5 star at HackerRank.
                         </p>
                     </div>
